--- a/templates/properties/showinput-listing.html.twig
+++ b/templates/properties/showinput-listing.html.twig
@@ -1,3 +1,3 @@
 {# @mime/properties/showinput-listing.html.twig #}
 
-{{ include('@property/listing/showinput.html.twig', {'module': 'mime'}) }}
+{% extends '@property/listing/showinput.html.twig' %}
